test/corpus/type_class_nested_sequence_restrictions.sdm
=============================================
Type Class, With Nested Sequence Restrictions
=============================================

module corpus_test_typeclass is

  class Option (A <- {ordered} Eq(B) B <- {unique} Any)

end

---

(module
  (identifier)
  (module_body
    (type_class_def
      (identifier)
      (type_parameter
        (identifier)
        (type_parameter_restriction
          (cardinality_reference_expression
            (sequence_ordering))
          (identifier_reference
            (identifier))
          (type_restriction_argument
            (identifier))))
      (type_parameter
        (identifier)
        (type_parameter_restriction
          (cardinality_reference_expression
            (sequence_uniqueness))
          (identifier_reference
            (identifier)))))))
