test/corpus/type_constructor_fix9.sdm
====================================
Regression Test #9: Type Constructor
====================================

module type_constructor_fix9 is

  import dc

  @dc:description = "Regression test for bug #9"@en
  @dc:date = xsd:date("2024-06-27")

end

---

(module
  (identifier)
  (module_body
    (import_statement
      (module_import
        (identifier)))
    (annotation
      (annotation_property
        (identifier_reference
          (qualified_identifier
            (identifier)
            (identifier)))
        (value
          (simple_value
            (string
              (quoted_string)
              (language_tag))))))
    (annotation
      (annotation_property
        (identifier_reference
          (qualified_identifier
            (identifier)
            (identifier)))
        (value
          (value_constructor
            (identifier_reference
              (qualified_identifier
                (identifier)
                (identifier)))
            (simple_value
              (string
                (quoted_string)))))))))
