test/corpus/union_from_multiple.sdm
================================
Union, With From clause multiple
================================

module corpus_test_union is

  union NameKind from Names with [ Internal Unknown ] of
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (union_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_with_members
          member: (mixin_member
            member: (identifier))
          member: (mixin_member
            member: (identifier))))
      body: (union_body
        (type_variant
          name: (identifier_reference
            (identifier)))))))
