test/corpus/union_from_single.sdm
==============================
Union, With From clause single
==============================

module corpus_test_union is

  union NameKind from Names with Internal of
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (union_def
      name: (identifier)
      from: (from_definition_clause
        mixin: (mixin_clause
          from: (identifier_reference
            (identifier))
          (mixin_with_members
            member: (mixin_member
              member: (identifier)))))
      body: (union_body
        (type_variant
          name: (identifier_reference
            (identifier)))))))
